# CSE180Project

./: .ycm_extra_conf.py  README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/leg_detector/: LegDetectorConfig.h
devel/lib/leg_detector/: leg_detector
devel/lib/pkgconfig/: leg_detector.pc  project.pc
devel/lib/project/: LaserScan  MoveRobot  final  gotospecpoint  lasertest  lasertest2  moverobot
devel/lib/python2.7/dist-packages/leg_detector/cfg/: LegDetectorConfig.py
devel/share/leg_detector/cmake/: leg_detectorConfig.cmake
devel/share/project/cmake/: projectConfig.cmake
husky/husky_control/config/: control.yaml  controlnew.yaml
husky/husky_description/launch/: description.launch
husky/husky_gazebo/config/: gazebo_ros_control_params.yaml
husky/husky_gazebo/launch/: cse180projfinal.launch  husky_playpen.launch  huskyfinal.launch  huskynew_playpen.launch  playpenfinal.launch
husky/husky_gazebo/worlds/: final2019.world
src/project/: CMakeLists.txt
src/project/launch/: husky_navigate.launch
src/project/src/: LaserScan.cpp  MoveRobot.cpp  final.cpp  gotospecpoint.cpp  lasertest.cpp  lasertest2.cpp  lasertest3.cpp  moverobot.cpp  moverobot2.cpp  robo coords.txt
